--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@
                             <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" > niyati is too secretive she wants to check your personal dms lmao please tell me also what she wrote hehehe</p>
                            </li>
                           </ul>
+                        
+                         <ul class="list-group">
+                            <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li" >
+                            <h4> YUUUUVVVIIII SAYS: </h4>
+                            <img src="yuvraj.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12" >
+                            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >hey shubh bro,you are the best and most important person in my life, and you are the best friend i could have ever had and no words can describe you.</p>
+                           </li>
+                          </ul>
 
                               <br>
                           <div class="page-header" id="questions">
